# ghl-api-wrapper

./: AGENTS.md  README.md
docs/: AI-MANUAL.md
wrapper/: .gitignore  README.md  pyproject.toml
wrapper/src/ghl/: cli.py  client.py  config.py
wrapper/src/ghl/endpoints/: calendars.py  contacts.py  conversations.py  locations.py  objects.py  opportunities.py  workflows.py
wrapper/tests/: conftest.py  test_calendars.py  test_cli.py  test_cli_comprehensive.py  test_cli_no_key_comprehensive.py  test_client.py  test_config.py  test_contacts.py  test_conversations.py  test_endpoints_comprehensive.py  test_locations.py  test_objects.py  test_opportunities.py  test_workflows.py
